test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/enum_impl_method.sw
library;

enum E {
    A: (),
}

impl E {
    #[test(invalid)]
    #[payable(invalid)]
    //! Invalid inner comment.
    #[fallback(invalid)]
    #[error_type(invalid)]
    #[error(invalid)]
    fn method(self) {}
}
